--- a/spmia-chapter4/organization-service/src/main/resources/bootstrap.yml
+++ b/spmia-chapter4/organization-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: organizationservice
+    name: organizationservice # 유레카에 등록할 논리 이름
   profiles:
     active:
       default
