--- a/spmia-chapter3/licensing-service/src/main/resources/bootstrap.yml
+++ b/spmia-chapter3/licensing-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: licensingservice
+    name: licensingservice #스프링 컨피그의 디렉토리명 과 일치해야 함
   profiles:
     active:
       default
