--- a/spmia-chapter4/eurekasvr/src/main/resources/application.yml
+++ b/spmia-chapter4/eurekasvr/src/main/resources/application.yml
@@ -4,10 +4,10 @@ server:
 
 eureka:
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: false # 유레카 서비스에 (자신을) 등록하지 않는다.
+    fetchRegistry: false  # 레지스트리 정보를 로컬에 캐싱하지 않는다. (유레카 클라이언트 기반) 로컬 캐싱 안함
   server:
-    waitTimeInMsWhenSyncEmpty: 5
+    waitTimeInMsWhenSyncEmpty: 5  # 서버가 요청을 받기 전 대기할 초기 시간(ms) : 거의 대기 없음
   serviceUrl:
     defaultZone: http://localhost:8761
   
