--- a/spmia-chapter4/organization-service/src/main/resources/application.yml
+++ b/spmia-chapter4/organization-service/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 
 eureka:
   instance:
-    preferIpAddress: true
+    preferIpAddress: true # 서비스 이름(호스트 이름) 대신 서비스 IP 주소 등록
   client:
-    registerWithEureka: true
-    fetchRegistry: true
+    registerWithEureka: true  # 유레카에 서비스 등록
+    fetchRegistry: true # 레지스트리의 로컬 복사본을 가져오도록 지정(유레카 클라이언트 로컬 캐싱), 30초마다 서버에 캐싱 변경 확인 및 업데이트
     serviceUrl:
-        defaultZone: http://localhost:8761/eureka/
+        defaultZone: http://localhost:8761/eureka/  # 레지스트리 사본을 로컬에 가져오기
 
         
