--- a/spmia-chapter3/confsvr/src/main/resources/bootstrap.yml
+++ b/spmia-chapter3/confsvr/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
   cloud:
     config:
       server:
-        encrypt.enabled: false
+        encrypt.enabled: false # 컨피그 서버에서 클라이언트 설정의 {chiper} 파일을 복호화 하지 않는다. 복호하는 클라이언트에서 처리
