--- a/spmia-chapter3/licensing-service/pom.xml
+++ b/spmia-chapter3/licensing-service/pom.xml
@@ -62,6 +62,7 @@
       <!-- <version>9.4-1206-jdbc42</version> -->
 <!-- <version>9.4-1206-jdbc42</version> -->
     </dependency>
+      <!-- 컨피그 서버에서 전달된 암호화된 프로퍼티를 복호화하는데 필요한 스프링 코드가 있음 -->
       <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-rsa</artifactId>
