--- a/spmia-chapter3/confsvr/src/main/resources/application.yml
+++ b/spmia-chapter3/confsvr/src/main/resources/application.yml
@@ -10,37 +10,37 @@
 
 
 ####################################
-server:
-  port: 8888
-spring:
-  cloud:
-    config:
-      server:
-        # encrypt.enabled should moved to bootstrap.yml
-        # encrypt.enabled: false
-        git:
-          uri: https://github.com/klimtever/config-repo/
-          username: native-cloud-apps
-          password: 0ffended
-          searchPaths: licensingservice,organizationservice
-          #uri: https://github.com/heeya1215/MSA-CodingPlant/tree/master/config-repo/
-          #username: heeya1215
-          #password: password
+#server:
+#  port: 8888
+#spring:
+#  cloud:
+#    config:
+#      server:
+#        # encrypt.enabled should moved to bootstrap.yml
+#        # encrypt.enabled: false
+#        git:
+#          uri: https://github.com/klimtever/config-repo/
+#          username: native-cloud-apps
+#          password: 0ffended
+#          searchPaths: licensingservice,organizationservice
+#          #uri: https://github.com/heeya1215/MSA-CodingPlant/tree/master/config-repo/
+#          #username: heeya1215
+#          #password: password
 
 
 ####
 #Classpath and file-based solution
 ####
 
-#server:
-#   port: 8888
-#spring:
-#  profiles:
-#    active: native
-#  cloud:
-#     config:
-#       server:
-#           native:
-#              searchLocations: file:///D:\DevGitChan\MyStudy\MSA-CodingPlant\spmia-chapter3/confsvr/src/main/resources/config/licensingservice,
-#                               file:///D:\DevGitChan\MyStudy\MSA-CodingPlant\spmia-chapter3/src/main/resources/config/organizationservice
-###              #searchLocations: classpath:config/,classpath:config/licensingservice
+server:
+   port: 8888
+spring:
+  profiles:
+    active: native
+  cloud:
+     config:
+       server:
+           native:
+              searchLocations: file:///D:\DevGitChan\MyStudy\MSA-CodingPlant\spmia-chapter3/confsvr/src/main/resources/config/licensingservice,
+                               file:///D:\DevGitChan\MyStudy\MSA-CodingPlant\spmia-chapter3/src/main/resources/config/organizationservice
+##              #searchLocations: classpath:config/,classpath:config/licensingservice
