--- a/spmia-chapter4/organization-service/src/main/resources/application.yml
+++ b/spmia-chapter4/organization-service/src/main/resources/application.yml
@@ -6,6 +6,6 @@ eureka:
     registerWithEureka: true  # 유레카에 서비스 등록
     fetchRegistry: true # 레지스트리의 로컬 복사본을 가져오도록 지정(유레카 클라이언트 로컬 캐싱), 30초마다 서버에 캐싱 변경 확인 및 업데이트
     serviceUrl:
-        defaultZone: http://localhost:8761/eureka/  # 레지스트리 사본을 로컬에 가져오기
+        defaultZone: http://localhost:8761/eureka/  # 유레카 서비스 목록을 쉼표로 구분 입력 (여기서는 1개의 유레카만 사용)
 
         
